--- a/src/components/main-menu/index.css
+++ b/src/components/main-menu/index.css
@@ -15,8 +15,8 @@
     left: 0;
     height: 100%;
     display: none;
-    z-index: 1000;
-  
+    z-index: 3000;
+
     .main-menu-content {
         display: flex;
         flex-direction: column;
@@ -33,15 +33,15 @@
             margin-bottom: .2em;
 
             &:hover {
-                background-color: #a953fa!important;
+                background-color: #a953fa !important;
 
-                a:after { 
+                a:after {
                     display: none;
                 }
             }
-            
+
             a {
-                color: #fff!important;
+                color: #fff !important;
             }
         }
 
@@ -65,14 +65,14 @@
                     mask-image: url("/src/shared/assets/icons/arrow-right.svg");
                 }
             }
-            
+
             a {
                 color: #000;
                 text-decoration: none;
                 display: flex;
                 gap: 1em;
                 align-items: center;
-                
+
                 &:before {
                     content: '';
                     width: 1.5em;
@@ -98,28 +98,93 @@
                     background-color: transparent;
                 }
 
-                &[name="women"]::before { mask-image: url("/src/shared/assets/icons/women.svg"); }
-                &[name="shoes"]::before { mask-image: url("/src/shared/assets/icons/shoes.svg"); }
-                &[name="kids"]::before { mask-image: url("/src/shared/assets/icons/kids.svg"); }
-                &[name="men"]::before { mask-image: url("/src/shared/assets/icons/man.svg"); }
-                &[name="home"]::before { mask-image: url("/src/shared/assets/icons/home.svg"); }
-                &[name="beauty"]::before { mask-image: url("/src/shared/assets/icons/beauty.svg"); }
-                &[name="accessories"]::before { mask-image: url("/src/shared/assets/icons/accessories.svg"); }
-                &[name="electronics"]::before { mask-image: url("/src/shared/assets/icons/electronics.svg"); }
-                &[name="toys"]::before { mask-image: url("/src/shared/assets/icons/toys.svg"); }
-                &[name="furniture"]::before { mask-image: url("/src/shared/assets/icons/furniture.svg"); }
-                &[name="adult"]::before { mask-image: url("/src/shared/assets/icons/adult.svg"); }
-                &[name="food"]::before { mask-image: url("/src/shared/assets/icons/food.svg"); }
-                &[name="appliances"]::before { mask-image: url("/src/shared/assets/icons/appliances.svg"); }
-                &[name="pets"]::before { mask-image: url("/src/shared/assets/icons/pets.svg"); }
-                &[name="sports"]::before { mask-image: url("/src/shared/assets/icons/sport.svg"); }
-                &[name="auto"]::before { mask-image: url("/src/shared/assets/icons/auto.svg"); }
-                &[name="books"]::before { mask-image: url("/src/shared/assets/icons/books.svg"); }
-                &[name="tools"]::before { mask-image: url("/src/shared/assets/icons/tools.svg"); }
-                &[name="garden"]::before { mask-image: url("/src/shared/assets/icons/garden.svg"); }
-                &[name="health"]::before { mask-image: url("/src/shared/assets/icons/health.svg"); }
-                &[name="stationery"]::before { mask-image: url("/src/shared/assets/icons/stationery.svg"); }
-                &[name="promotions"]::before { mask-image: url("/src/shared/assets/icons/promotions.svg"); }
+                &[name="women"]::before {
+                    mask-image: url("/src/shared/assets/icons/women.svg");
+                }
+
+                &[name="shoes"]::before {
+                    mask-image: url("/src/shared/assets/icons/shoes.svg");
+                }
+
+                &[name="kids"]::before {
+                    mask-image: url("/src/shared/assets/icons/kids.svg");
+                }
+
+                &[name="men"]::before {
+                    mask-image: url("/src/shared/assets/icons/man.svg");
+                }
+
+                &[name="home"]::before {
+                    mask-image: url("/src/shared/assets/icons/home.svg");
+                }
+
+                &[name="beauty"]::before {
+                    mask-image: url("/src/shared/assets/icons/beauty.svg");
+                }
+
+                &[name="accessories"]::before {
+                    mask-image: url("/src/shared/assets/icons/accessories.svg");
+                }
+
+                &[name="electronics"]::before {
+                    mask-image: url("/src/shared/assets/icons/electronics.svg");
+                }
+
+                &[name="toys"]::before {
+                    mask-image: url("/src/shared/assets/icons/toys.svg");
+                }
+
+                &[name="furniture"]::before {
+                    mask-image: url("/src/shared/assets/icons/furniture.svg");
+                }
+
+                &[name="adult"]::before {
+                    mask-image: url("/src/shared/assets/icons/adult.svg");
+                }
+
+                &[name="food"]::before {
+                    mask-image: url("/src/shared/assets/icons/food.svg");
+                }
+
+                &[name="appliances"]::before {
+                    mask-image: url("/src/shared/assets/icons/appliances.svg");
+                }
+
+                &[name="pets"]::before {
+                    mask-image: url("/src/shared/assets/icons/pets.svg");
+                }
+
+                &[name="sports"]::before {
+                    mask-image: url("/src/shared/assets/icons/sport.svg");
+                }
+
+                &[name="auto"]::before {
+                    mask-image: url("/src/shared/assets/icons/auto.svg");
+                }
+
+                &[name="books"]::before {
+                    mask-image: url("/src/shared/assets/icons/books.svg");
+                }
+
+                &[name="tools"]::before {
+                    mask-image: url("/src/shared/assets/icons/tools.svg");
+                }
+
+                &[name="garden"]::before {
+                    mask-image: url("/src/shared/assets/icons/garden.svg");
+                }
+
+                &[name="health"]::before {
+                    mask-image: url("/src/shared/assets/icons/health.svg");
+                }
+
+                &[name="stationery"]::before {
+                    mask-image: url("/src/shared/assets/icons/stationery.svg");
+                }
+
+                &[name="promotions"]::before {
+                    mask-image: url("/src/shared/assets/icons/promotions.svg");
+                }
             }
 
         }
@@ -127,11 +192,21 @@
 }
 
 @keyframes showMainMenu {
-    from { transform: translateX(-350px); }
-    to { transform: translateX(0); }
+    from {
+        transform: translateX(-350px);
+    }
+
+    to {
+        transform: translateX(0);
+    }
 }
 
 @keyframes hideMainMenu {
-    from { transform: translateX(0); }
-    to { transform: translateX(-350px); }
+    from {
+        transform: translateX(0);
+    }
+
+    to {
+        transform: translateX(-350px);
+    }
 }
